--- a/src/app/pages/my-apps/my-apps.component.scss
+++ b/src/app/pages/my-apps/my-apps.component.scss
@@ -59,3 +59,10 @@
 .api-tabs .table>thead>tr>th {
     border-bottom: 1px solid #dddddd !important;
 }
+
+.no-data{
+    padding: 20px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+}
