--- a/src/app/pages/terms-and-conditions/terms-and-conditions.component.scss
+++ b/src/app/pages/terms-and-conditions/terms-and-conditions.component.scss
@@ -5,9 +5,14 @@
 }
 
 .term-condation-dec {
-    // height: 400px;
+    height: 1200px;
     margin-bottom: 30px;
-    // overflow-y: scroll;
+    overflow-y: scroll;
+}
+
+.term-condation-dec h2 {
+    font-size: 21px;
+    font-weight: 600;
 }
 
 .terms-from {
