--- a/src/app/pages/Download/transaction-report/transaction-report.component.html
+++ b/src/app/pages/Download/transaction-report/transaction-report.component.html
@@ -1,7 +1,7 @@
 <section class="stox-card">
-    <h1 class="text-center stox-title">Contract Note</h1>
+    <h1 class="text-center stox-title">Transaction Report</h1>
     <ng-container>
-        <form class="row g-3" [formGroup]="contractNoteGroup" (ngSubmit)="save()">
+        <form class="row g-3" [formGroup]="transactionReportGroup">
             <div class="col-md-3">
                 <label for="inputEmail4" class="form-label">From Date</label>
                 <input type="date" class="form-control" id="From"formControlName="FromDate">
