--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -168,7 +168,7 @@
           </li>
 
           <li class="notification-item">
-            <a routerLinkActive='active'>
+            <a routerLinkActive='active' routerLink="/home/dms">
               <span>DMS</span>
             </a>
           </li>
@@ -178,7 +178,7 @@
           </li>
 
           <li class="notification-item">
-            <a routerLinkActive='active'>
+            <a routerLinkActive='active' routerLink="/home/transaction-report">
               <span>Transaction Report</span>
             </a>
           </li>
@@ -187,7 +187,7 @@
             <hr class="dropdown-divider">
           </li>
 
-          <li class="notification-item">
+          <li class="notification-item" routerLink="/home/agts">
             <a routerLinkActive='active'>
               <span>AGTS</span>
             </a>
@@ -198,7 +198,7 @@
           </li>
 
           <li class="notification-item">
-            <a routerLinkActive='active'>
+            <a routerLinkActive='active' routerLink="/home/stt">
               <span>STT Certificate</span>
             </a>
           </li>
@@ -208,7 +208,7 @@
           </li>
 
           <li class="notification-item">
-            <a routerLinkActive='active'>
+            <a routerLinkActive='active' routerLink="/home/dp-holding">
               <span>DP Holding</span>
             </a>
           </li>
@@ -257,21 +257,26 @@
               <span>Supports</span>
             </a>
           </li>
+          
           <li>
             <hr class="dropdown-divider">
           </li>
 
           <li>
-            <a class="dropdown-item d-flex align-items-center" (click)="logOut()">
-              <i class="bi bi-box-arrow-right"></i>
-              <span>Sign Out</span>
+            <a class="dropdown-item d-flex align-items-center" (click)="navigate()">
+              <i class="bi bi-columns-gap"></i>
+              <span>Apps</span>
             </a>
           </li>
 
-          <li *ngIf="!isVerified">
-            <a class="dropdown-item d-flex align-items-center" routerLink="/home/terms-and-conditions">
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          
+          <li>
+            <a class="dropdown-item d-flex align-items-center" (click)="logOut()">
               <i class="bi bi-box-arrow-right"></i>
-              <span>API</span>
+              <span>Sign Out</span>
             </a>
           </li>
 
