--- a/src/app/pages/my-apps/my-apps.component.html
+++ b/src/app/pages/my-apps/my-apps.component.html
@@ -53,39 +53,85 @@
                         <div class="tab-content">
                             <div class="tab-pane fade show active" id="myapp-active" role="tabpanel"
                                 aria-labelledby="myapp-active-tab">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Name</th>
-                                            <th>Access Type</th>
-                                            <th>Expiry Date</th>
-                                            <th>Note</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>santoo</td>
-                                            <td>Api Training</td>
-                                            <td>31/03/2030</td>
-                                            <td>-</td>
-                                        </tr>
-                                        <tr>
-                                            <td>santoo</td>
-                                            <td>Api Training</td>
-                                            <td>31/03/2030</td>
-                                            <td>-</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <br>
-                                <div class="text-center">
-                                    <p>Are you looking for strategic partnership for your business ? <br><br>Try Gstox
-                                        for business </p>
+                                <div *ngIf="appData && appData.length">
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                <th>Name</th>
+                                                <th>Access Type</th>
+                                                <th>Expiry Date</th>
+                                                <th>Note</th>
+                                                <th>Action</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngFor="let item of appData">
+                                                <td>{{item.app_name}}</td>
+                                                <td>{{item.access_type}}</td>
+                                                <td>{{item.expiry_date}}</td>
+                                                <td>{{item.description}}</td>
+                                                <td>
+                                                    <i class="bi bi-trash3-fill" style="cursor: pointer;" (click)="deleteApp(item)"></i>
+                                                </td>
+                                            </tr>
+                                            <!-- <tr>
+                                                <td>santoo</td>
+                                                <td>Api Training</td>
+                                                <td>31/03/2030</td>
+                                                <td>-</td>
+                                            </tr> -->
+                                        </tbody>
+                                    </table>
+                                    <br>
+                                    <div class="text-center">
+                                        <p>Are you looking for strategic partnership for your business ? <br><br>Try Gstox
+                                            for business </p>
+                                    </div>
+                                </div>
+                                <div class="no-data" *ngIf="appData && !appData.length">
+                                    No Data Found
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="myapp-expired" role="tabpanel"
                                 aria-labelledby="myapp-expired-tab">
-                                0
+                                <div *ngIf="expAppData && expAppData.length">
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                <th>Name</th>
+                                                <th>Access Type</th>
+                                                <th>Expiry Date</th>
+                                                <th>Note</th>
+                                                <th>Action</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngFor="let item of expAppData">
+                                                <td>{{item.app_name}}</td>
+                                                <td>{{item.access_type}}</td>
+                                                <td>{{item.expiry_date}}</td>
+                                                <td>{{item.description}}</td>
+                                                <td>
+                                                    <i class="bi bi-trash3-fill" style="cursor: pointer;" (click)="deleteApp(item)"></i>
+                                                </td>
+                                            </tr>
+                                            <!-- <tr>
+                                                <td>santoo</td>
+                                                <td>Api Training</td>
+                                                <td>31/03/2030</td>
+                                                <td>-</td>
+                                            </tr> -->
+                                        </tbody>
+                                    </table>
+                                    <br>
+                                    <div class="text-center">
+                                        <p>Are you looking for strategic partnership for your business ? <br><br>Try Gstox
+                                            for business </p>
+                                    </div>
+                                </div>
+                                <div class="no-data" *ngIf="expAppData && !expAppData.length">
+                                    No Data Found
+                                </div>
                             </div>
                         </div>
                     </div>
